--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   appwrite: ^8.2.2
   flutter_svg: ^2.0.2
+  flutter_riverpod: ^2.3.0
+  fpdart: ^0.5.0
 
 dev_dependencies:
   flutter_test:
